# IACT

./: .ci-local.yaml  .constitucion.yaml  .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-hooks-readme.md  .secrets.baseline  AGENTS.md  ANALISIS_GAPS_POST_DORA_2025.md  ANALISIS_POLITICA_NO_EMOJIS.md  ANALISIS_REFACTORING_CPYTHON.md  CHANGELOG.md  CODEOWNERS  COMANDOS_RAPIDOS_FASE_4.sh  CONSOLIDATION_STATUS.md  CORRECCIONES_MENORES.md  DEMO_DOCUMENTACION_RENDERIZADA.md  DOCS_LEGACY_ANALYSIS_REPORT.md  ESTRATEGIA_GIT_HOOKS.md  FASE_4_TAREAS_FINALES_066_072.md  INDEX.md  INDICE-REPORTES-ANALISIS-QA-BACKEND.md  INDICE.md  INDICE_REPORTES_EXPLORACION.md  INDICE_VALIDACION.md  INICIO_RAPIDO_FASE_4.md  INTEGRATION_ANALYSIS_REPORT.md  INTEGRATION_READINESS_REPORT.md  MAPEO_MIGRACION_LEGACY.md  MERGE_STRATEGY_PR_175.md  META_AGENTS_PROGRESS.md  Makefile  ONBOARDING.md  PR_BODY.md  PR_BODY_INTEGRATION.md  PR_DESCRIPTION.md  PR_INFO.md  PULL_REQUEST_INFO.md  (+28 more)
api/: manage.py  pyproject.toml  pytest.integration.ini
api/callcentersite/: .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Makefile  QUALITY_SETUP.md  __init__.py  check_vm_network.py  coveragerc  env  env.example  manage.py  pyproject.toml  pytest.ini  rebuild_db_simple_fix.ps1  settings.py  test_json_logging.py  test_json_logging_simple.py  urls.py  wsgi.py
api/callcentersite/callcentersite/: asgi.py  database_router.py  docs_backend_use_cases.py  logging.py  settings.py  urls.py  wsgi.py
api/callcentersite/callcentersite/apps/: __init__.py
api/callcentersite/callcentersite/middleware/: __init__.py  session_security.py
api/callcentersite/callcentersite/settings/: __init__.py  base.py  development.py  infrastructure_test.py  logging_config.py  production.py  sentry_config.py  testing.py
api/callcentersite/data_centralization/: __init__.py  apps.py  models.py  tests.py  urls.py  views.py
api/callcentersite/django/http/: __init__.py
api/callcentersite/django/test/: __init__.py
api/callcentersite/dora_metrics/: alerts.py  data_catalog.py  data_ecosystem.py  ml_models.py  models.py  urls.py  views.py
api/callcentersite/requirements/: base.txt  dev.txt  test.txt
api/callcentersite/src/callcentersite/: docs_backend_use_cases.py  urls.py
api/callcentersite/src/data_centralization/: admin.py  services.py  urls.py
api/callcentersite/src/dora_metrics/: admin.py  advanced_analytics.py  ai_telemetry.py  apps.py  auto_remediation.py  data_catalog.py  data_ecosystem.py  ml_features.py  models.py  tests_ai_telemetry.py  tests_predictive_analytics.py  throttling.py  urls.py  views.py
api/callcentersite/test/contrib/: __init__.py
api/callcentersite/test/test/: __init__.py
api/callcentersite/tests/: conftest.py  test_lfpdppp_compliance.py
api/callcentersite/tests/audit/: test_audit_log.py
api/callcentersite/tests/authentication/: __init__.py  test_login.py  test_passwords.py
api/callcentersite/tests/configuracion/: test_api_rest_configuracion.py  test_casos_uso_configuracion.py
api/callcentersite/tests/dashboard/: test_api_rest_dashboard.py
api/callcentersite/tests/devcontainer/: test_conftest_reset.py  test_copilot_runbook.py  test_init_host_script.py  test_post_create_script.py
api/callcentersite/tests/docs/: test_backend_use_cases.py
api/callcentersite/tests/excepciones/: test_api_rest_excepciones.py
api/callcentersite/tests/infrastructure/: __init__.py  test_db_connections.py
api/callcentersite/tests/integration/: README.md  test_dora_metrics_integration.py  test_usuario_completo.py
api/callcentersite/tests/ivr_legacy/: __init__.py  test_integration.py  test_queries.py
api/callcentersite/tests/middleware/: test_session_security.py
api/callcentersite/tests/notifications/: test_casos_uso_buzon_interno.py
api/callcentersite/tests/permisos_api/: test_decorators_mixins.py
api/callcentersite/tests/permissions/: test_casos_uso_permisos.py
api/callcentersite/tests/politicas/: test_casos_uso_politicas.py
api/callcentersite/tests/presupuestos/: test_api_rest_presupuestos.py
api/callcentersite/tests/routers/: test_database_router.py
api/callcentersite/tests/settings/: test_middleware_and_databases.py  test_sqlite_fallback.py
api/callcentersite/tests/system/: test_management_health.py
api/callcentersite/tests/users/: test_casos_uso_usuarios.py  test_permission_precedence.py
api/requirements/: base.txt  dev.txt  test.txt
api/src/callcentersite/middleware/: __init__.py
api/src/callcentersite/settings/: base.py  development.py  infrastructure_test.py  logging_config.py  testing.py
api/tests/: __init__.py  conftest.py
api/tests/authentication/: test_auth_api.py  test_inactivity.py  test_login.py  test_logout.py  test_single_session.py  test_tokens.py
api/tests/contrib/auth/: __init__.py
api/tests/contrib/sessions/: middleware.py
api/tests/dashboard/: test_casos_uso_dashboard.py
api/tests/devcontainer/: test_conftest_reset.py
api/tests/docs/: test_backend_use_cases.py
api/tests/etl/: test_casos_uso_etl.py
api/tests/excepciones/: test_casos_uso_excepciones.py
api/tests/http/: __init__.py
api/tests/infrastructure/: __init__.py
api/tests/integration/: test_administrador_completo.py  test_configuracion_backup.py  test_dashboard_personalizado.py  test_dora_exports.py  test_dora_versioning.py  test_usuario_suspension.py
api/tests/ivr_legacy/: test_models.py
api/tests/llamadas/: test_casos_uso_llamadas.py
api/tests/middleware/: test_session_security_auditoria.py
api/tests/notifications/: test_api_rest_buzon_interno.py
api/tests/permisos_api/: test_rest_api_permisos.py
api/tests/politicas/: test_api_rest_politicas.py
api/tests/presupuestos/: test_casos_uso_presupuestos.py
api/tests/reportes/: test_api_rest_reportes_ivr.py  test_casos_uso_reportes_ivr.py
api/tests/settings/: test_sqlite_fallback.py
api/tests/unit/: test_related_names_conflicts.py
api/tests/unit/dashboard/: __init__.py
api/tests/users/: test_api_rest_users.py  test_models.py  test_permission_service.py  test_user_registration.py
(+5478 files in other folders)
