[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callcentersite"
version = "0.1.0"
description = "CallCenter Django API Application"
requires-python = ">=3.12"
readme = "readme.md"
authors = [
    {name = "CallCenter Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]

# **************** INICIO DE CAMBIOS POR MIGRACIÓN A SRC/ ****************

[tool.setuptools.packages.find]
# Indica a Setuptools que busque los paquetes instalables dentro de la carpeta 'src'
where = ["src"]
# Lista los paquetes principales que deben ser instalados
include = ["callcentersite", "data_centralization", "dora_metrics"]

[tool.django-stubs]
# Se actualiza el path de los settings para incluir 'src'
django_settings_module = "src.callcentersite.settings.development"

[tool.pytest.ini_options]
# Se actualiza el path de los settings para Pytest
DJANGO_SETTINGS_MODULE = "src.callcentersite.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["."]
addopts = "-v --strict-markers --tb=short"

[tool.coverage.run]
# Se indica a coverage que la fuente del código es la carpeta 'src'
source = ["src"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "manage.py",
    "*/wsgi.py",
    "*/asgi.py",
]
branch = true

# **************** FIN DE CAMBIOS POR MIGRACIÓN A SRC/ ****************

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "migrations",
    ".venv",
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "YTT",   # flake8-2020
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "BLE",   # flake8-blind-except
    "FBT",   # flake8-boolean-trap
    "A",     # flake8-builtins
    "COM",   # flake8-commas
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "DJ",    # flake8-django
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "G",     # flake8-logging-format
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SLF",   # flake8-self
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # pylint
    "TRY",   # tryceratops
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults (Django uses this)
    "DJ001",   # avoid nullable CharField/TextField (legacy code)
    "S101",    # use of assert (OK in tests)
    "S105",    # hardcoded password (false positives)
    "S106",    # hardcoded password (false positives)
    "PLR0913", # too many arguments
    "PLR2004", # magic value in comparison
    "TRY003",  # avoid long messages outside exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "PLR2004", # magic values OK in tests
    "ARG",     # unused arguments in fixtures
]
"**/migrations/*.py" = ["ALL"]
"manage.py" = ["T201"]  # print allowed in manage.py
"settings/**/*.py" = [
    "S105",    # hardcoded passwords in settings
    "F405",    # may be undefined from star imports
]

[tool.ruff.lint.isort]
known-first-party = ["callcentersite"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["callcentersite"]
skip = ["migrations"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = false  # Gradual typing - enable later
disallow_any_unimported = false
disallow_any_generics = false
disallow_subclassing_any = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

exclude = [
    "migrations/",
    "venv/",
    "tests/",
]

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "*.tests.*",
    "manage",
]
ignore_errors = true

[tool.bandit]
exclude_dirs = [
    "tests",
    "migrations",
    ".venv",
]
skips = [
    "B101",  # assert_used - OK in tests
    "B601",  # paramiko_calls - not applicable
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 100

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true